# cricket_etl

./: .gitignore  README.md  project_structure.txt  pyproject.toml  tree_code_only.txt  tree_data_dirs_only.txt
data/06_helpers/mapping/: team_league_map.csv  team_name_errors.csv  venue_map.csv
src/cricket_etl/: __main__.py
src/cricket_etl/helpers/: catalog.py  duckdb_utils.py  functions.py  logger.py
src/cricket_etl/pipeline/: __init__.py
src/cricket_etl/pipeline/p01_ingest/: __init__.py  ingest.py  ingest_flow.py
src/cricket_etl/pipeline/p02_raw/: __init__.py  raw.py  raw_flow.py
src/cricket_etl/pipeline/p03_bronze/: __init__.py  bronze_flow.py  innings_bronze.py  match_info_bronze.py  raw_match_info.py  registry_bronze.py
src/cricket_etl/pipeline/p04_silver/: __init__.py  create_schema.py  create_views.py  create_wide_table.py  silver_flow.py
src/cricket_etl/pipeline/p05_model/: __init__.py  create_dim_tables.py  create_fact_tables.py  model_flow.py  write_model_parquets.py
tests/cricket_etl/: __init__.py
tests/cricket_etl/helpers/: test_file_paths.py
tests/cricket_etl/pipeline/p02_raw/: raw.py
tests/unit/pipeline/: ingest_test.py  test_innings_bronze.py  test_match_info_bronze.py
