[project]
name = "cricket-etl"
authors = [{ name="Vivek Thomas", email="vivek-thomas@outlook.com" }]
version = "0.1.0"
description = "ETL project to create a tabular model of cricket data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.3.2",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "orjson>=3.11.0",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "seaborn>=0.13.2",
]

[project.scripts]
cricket-etl = "cricket_etl.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.pytest.ini_options]
# pythonpath = ["src"]
